--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -6,32 +6,57 @@
 
 /* BG */
 
-	body.is-preload #bg:before {
-		background-color: transparent;
-	}
+body.is-preload #bg:before {
+	background-color: transparent;
+}
 
 /* Header */
 
-	body.is-preload #header {
-		-moz-filter: none;
-		-webkit-filter: none;
-		-ms-filter: none;
-		filter: none;
-	}
+body.is-preload #header {
+	-moz-filter: none;
+	-webkit-filter: none;
+	-ms-filter: none;
+	filter: none;
+}
 
-		body.is-preload #header > * {
-			opacity: 1;
-		}
+body.is-preload #header > * {
+	opacity: 1;
+}
 
-		body.is-preload #header .content .inner {
-			max-height: none;
-			padding: 3rem 2rem;
-			opacity: 1;
-		}
+body.is-preload #header .content .inner {
+	max-height: none;
+	padding: 3rem 2rem;
+	opacity: 1;
+}
 
 /* Main */
 
-	#main article {
-		opacity: 1;
-		margin: 4rem 0 0 0;
-	}
+#main article {
+	opacity: 1;
+	margin: 4rem 0 0 0;
+}
+
+
+/* Projects */
+.Project_images{
+	margin: 20px;
+	padding: 50px;
+}
+div.gallery {
+	margin: 10px;
+	border: 1px solid #ccc;
+	float: left;
+	width: 180px;
+	box-shadow: 4px 3px;
+}
+div.gallery:hover {
+	border: 1px solid #777;
+}
+div.gallery img {
+	width: 100%;
+	height: auto;
+}
+div.desc {
+	padding: 15px;
+	text-align: center;
+}
