--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1659,3 +1659,31 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+/* Projects */
+
+div.gallery {
+	margin: 25px;
+	border: 1px solid #ccc;
+	float:left;
+	width: 210px;
+	height: 260px;
+	box-shadow: 4px 3px rgba(255, 255, 255, 0.573); 
+}
+div.gallery:hover {
+	border: 1px solid #777;
+}
+div.desc {
+	font-size: 15px;
+	letter-spacing: 1px;
+	padding: 15px;
+	text-align: center;
+}
+div.bold_desc{
+	padding: 15px 5px;
+	letter-spacing: 1px;
+	border-bottom: 1px solid #545454;
+	text-align: center;
+	font-weight: 600;
+	font-size: 17px;
+}
