--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1111,7 +1111,7 @@ input, select, textarea {
 		-webkit-transform: scale(1.0);
 		-ms-transform: scale(1.0);
 		transform: scale(1.0);
-		-webkit-backface-visibility: hidden;
+		/* -webkit-backface-visibility: hidden; */
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -1660,6 +1660,8 @@ input, select, textarea {
 			opacity: 0;
 		}
 
+
+
 /* Projects */
 
 div.gallery {
@@ -1673,6 +1675,10 @@ div.gallery {
 div.gallery:hover {
 	border: 1px solid #777;
 }
+/* div.gallery img {
+	width: 200px;
+	height: 150px;
+} */
 div.desc {
 	font-size: 15px;
 	letter-spacing: 1px;
