--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1544,7 +1544,7 @@ input, select, textarea {
 			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
 			padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
 			position: relative;
-			width: 40rem;
+			width: 50rem;
 			max-width: 100%;
 			background-color: rgba(27, 31, 34, 0.85);
 			border-radius: 4px;
@@ -1668,13 +1668,19 @@ div.gallery {
 	margin: 25px;
 	border: 1px solid #ccc;
 	float:left;
-	width: 210px;
-	height: 260px;
+	width: 400px;
+	height: 350px;
 	box-shadow: 4px 3px rgba(255, 255, 255, 0.573); 
 }
 div.gallery:hover {
 	border: 1px solid #777;
 }
+
+div p {
+	font-size: 1.1em;
+	margin-top: 35px;
+}
+
 /* div.gallery img {
 	width: 200px;
 	height: 150px;
